namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-identify-remand-periods-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-identify-remand-periods-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "digital_warrant_folder_public"
    cloud-platform.justice.gov.uk/application: "identify-remand-periods"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-identify-remand-periods.git"
    cloud-platform.justice.gov.uk/team-name: "farsight-devs"
